Fixed Image issue when width gets too big
Added rest of old projects
Added new styling for text

--- a/css/project_details_common.css
+++ b/css/project_details_common.css
@@ -44,13 +44,15 @@ body{
     padding:5% 5% 0% 5%;
     display: flex;
     justify-content: space-between;
-    min-height: ;
 }
 .proj-images{
-    width: 50%;
+    width: 35%;
+    min-width: 35%;
+    overflow: hidden;
 }
 .proj-img{
-    height: 35vh;
+    max-width: 100%;
+    height: auto;
     margin-bottom: 4%;
 }
 .proj-details{
@@ -59,6 +61,10 @@ body{
 .highlight-red{
     background: var(--proj-highlight-red);
     font-size: var(--proj-highlight-textSize);
+}
+.underline-red{
+    border-radius: 50px;
+    border-bottom: 3px solid var(--nav-hover-color);
 }
 
 .proj-about{
@@ -81,6 +87,9 @@ body{
     margin-top: 3%;
     color: var(--projDetails-smallerText-color);
     font-size: var(--projDetails-smallerText-size);
+}
+.proj-respon ul li ul li{
+    margin-left: 10%;
 }
 .proj-misc{
     opacity: 0;
@@ -125,13 +134,12 @@ body{
     display: flex;
     align-items: center;
 }
-.svg-links-vid, .svg-links-github{
+.svg-links-vid{
     margin-right: 30px;
     fill: var(--general-text-color);
     transition: fill 0.2s ease;
 }
-.svg-links-vid:hover, .svg-links-vid:active,
-.svg-links-github:hover, .svg-links-github:active{
+.svg-links-vid:hover, .svg-links-vid:active{
     fill: var(--nav-hover-color);
 }
 
@@ -158,7 +166,7 @@ body{
 
 
 /* Media Queries */
-@media screen and (max-width: 1020px){
+@media screen and (max-width: 880px){
     .proj-images{
         width: 100%;
         text-align: center;
@@ -183,6 +191,13 @@ body{
     }
 }
 @media screen and (max-width: 505px){
+    .underline-red{
+        border-bottom: 3px solid var(--nav-hover-color);
+    }
+    .highlight-red{
+        font-size: 1.3rem;
+    }
+    
     .title-name{
         font-size: 1.5rem;
     }
@@ -190,14 +205,18 @@ body{
     .project{
         padding: 5% 0%, 0%, 0%;
     }
-    .proj-img{
-        height: 25vh;
-    }
     .back-top{
         margin-top: 90px;
     }
 }
 @media screen and (max-width: 365px){    
+    .underline-red{
+        border-bottom: 2.5px solid var(--nav-hover-color);
+    }
+    .highlight-red{
+        font-size: 1.1rem;
+    }
+
     .page-title{
         height: 35vh;
     }
@@ -206,9 +225,6 @@ body{
         width: 70%;
     }
 
-    .proj-img{
-        height: 15vh;
-    }
     .proj-about h2,
     .proj-respon h2,
     .proj-misc h2{
@@ -221,9 +237,6 @@ body{
     .proj-respon ul li,
     .proj-misc p{
         font-size: 0.9rem;
-    }
-    .highlight-red{
-        font-size: 1.2rem;
     }
 
     .svg-links{
@@ -238,7 +251,14 @@ body{
         font-size: 1rem;
     }
 }
-@media screen and (max-width: 250px){
+@media screen and (max-width: 280px){
+    .underline-red{
+        border-bottom: 2px solid var(--nav-hover-color);
+    }
+    .highlight-red{
+        font-size: 0.9rem;
+    }
+    
     .title-bg{
         height: 25%;
         width: 70%;
@@ -261,11 +281,8 @@ body{
     .proj-misc p{
         font-size: 0.7rem;
     }
-    .highlight-red{
-        font-size: 1rem;
-    }
     
-    .svg-links-vid, .svg-links-github{
+    .svg-links-vid{
         margin-right: 20px;
         transform: scale(0.7,0.7);
     }
@@ -279,6 +296,12 @@ body{
     }
 }
 @media screen and (max-width: 220px){
+    .underline-red{
+        border-bottom: none;
+    }
+    .highlight-red{
+        font-size: 0.8rem;
+    }
 
     .title-bg{
         height: 30%;
@@ -288,9 +311,6 @@ body{
         font-size: 1.1rem;
     }
 
-    .proj-img{
-        height: 11vh;
-    }
     .proj-about h2,
     .proj-respon h2,
     .proj-misc h2{
@@ -301,13 +321,11 @@ body{
     .proj-misc p{
         font-size: 0.6rem;
     }
-    .highlight-red{
-        font-size: 0.9rem;
-    }
+    
     .underLine{
         height: 4px;
     }
-    .svg-links-vid, .svg-links-github{
+    .svg-links-vid{
         margin-right: 10px;
         transform: scale(0.6,0.6);
     }
@@ -322,6 +340,10 @@ body{
     }
 }
 @media screen and (max-width: 155px){
+    .highlight-red{
+        font-size: 0.7rem;
+    }
+
     .title-bg{
         height: 20%;
         width: 70%;
@@ -330,9 +352,6 @@ body{
         font-size: 0.9rem;
     }
 
-    .proj-img{
-        height: 9vh;
-    }
     .proj-about h2,
     .proj-respon h2,
     .proj-misc h2{
@@ -343,14 +362,16 @@ body{
     .proj-misc p{
         font-size: 0.6rem;
     }
-    .highlight-red{
-        font-size: 0.9rem;
-    }
+    
     .underLine.appear{
         width: 100%;
     }
 }
 @media screen and (max-width: 135px){
+    .highlight-red{
+        font-size: 0.7rem;
+    }
+    
     .title-bg{
         height: 20%;
         width: 70%;
@@ -360,9 +381,6 @@ body{
         font-size: 0.7rem;
     }
 
-    .proj-img{
-        height: 7vh;
-    }
     .proj-about h2,
     .proj-respon h2,
     .proj-misc h2{
@@ -376,11 +394,8 @@ body{
     .proj-misc p{
         font-size: 0.4rem;
     }
-    .highlight-red{
-        font-size: 0.7rem;
-    }
 
-    .svg-links-vid, .svg-links-github{
+    .svg-links-vid{
         margin-right: 5px;
         transform: scale(0.4,0.4);
     }
